# pokemon-api

./: netlify.toml
crates/pokemon-api/: Cargo.toml
crates/pokemon-api/src/: main.rs
crates/upload-pokemon-data/src/: db.rs
