[package]
name = "pokemon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.5.0"
http = "0.2.5"
lambda_runtime = "0.4.1"
once_cell = "1.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.5.9", features = ["mysql", "runtime-tokio-rustls"] }
tokio = "1.13.0"
